WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229643
CSSFontFaceSet.clear() should not clear CSS-connected members
https://bugs.webkit.org/show_bug.cgi?id=229643
Summary
CSSFontFaceSet.clear() should not clear CSS-connected members
Myles C. Maxfield
Reported
2021-08-27 23:54:26 PDT
CSSFontFaceSet.clear() should not clear CSS-connected members
Attachments
Patch
(4.37 KB, patch)
2021-08-27 23:55 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(4.42 KB, patch)
2021-08-27 23:59 PDT
,
Myles C. Maxfield
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-08-27 23:55:32 PDT
Created
attachment 436709
[details]
Patch
Myles C. Maxfield
Comment 2
2021-08-27 23:59:35 PDT
Created
attachment 436710
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-08-30 16:11:45 PDT
Comment on
attachment 436710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436710&action=review
> Source/WebCore/ChangeLog:11 > + Test: fast/text/FontFaceSet-clear-css-connected.html
Can this be a WPT?
Myles C. Maxfield
Comment 4
2021-08-31 02:19:14 PDT
Comment on
attachment 436710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436710&action=review
>> Source/WebCore/ChangeLog:11 >> + Test: fast/text/FontFaceSet-clear-css-connected.html > > Can this be a WPT?
https://github.com/web-platform-tests/wpt/pull/30254
Darin Adler
Comment 5
2021-08-31 11:12:06 PDT
Comment on
attachment 436710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436710&action=review
> Source/WebCore/css/FontFaceSet.cpp:137 > + m_backing->remove(m_backing.get()[facesPartitionIndex]);
Is this high-performance enough? Might be worth thinking that through.
Myles C. Maxfield
Comment 6
2021-09-01 00:44:54 PDT
Comment on
attachment 436710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436710&action=review
>> Source/WebCore/css/FontFaceSet.cpp:137 >> + m_backing->remove(m_backing.get()[facesPartitionIndex]); > > Is this high-performance enough? Might be worth thinking that through.
I've never actually seen any website ever call this function, so I think sharing code and guaranteeing that all the necessary work in remove() runs is probably more valuable than squeezing more performance out of this function.
Myles C. Maxfield
Comment 7
2021-09-01 00:45:13 PDT
Comment on
attachment 436710
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=436710&action=review
>>> Source/WebCore/css/FontFaceSet.cpp:137 >>> + m_backing->remove(m_backing.get()[facesPartitionIndex]); >> >> Is this high-performance enough? Might be worth thinking that through. > > I've never actually seen any website ever call this function, so I think sharing code and guaranteeing that all the necessary work in remove() runs is probably more valuable than squeezing more performance out of this function.
I guess I can at least iterate backwards, though.
Myles C. Maxfield
Comment 8
2021-09-01 01:59:56 PDT
Committed
r281842
(
241175@main
): <
https://commits.webkit.org/241175@main
>
Radar WebKit Bug Importer
Comment 9
2021-09-01 02:00:20 PDT
<
rdar://problem/82617907
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug